--- a/Web/Content/CSS/Front/css/camarco-screen.css
+++ b/Web/Content/CSS/Front/css/camarco-screen.css
@@ -164,10 +164,10 @@
 /* HOME / NOTICIAS DE LA CAMARA Y DEL SECTOR */
 .home-noticias { margin:0 0 30px 0; border-top-width:5px; border-top-style:solid; padding:14px 0 0 0; }
 	.home-noticias > h2 { font-family: 'Roboto Condensed', sans-serif; font-size:26px; font-weight:400; color:#ed8260; margin-bottom:29px; }
-	.home-noticias > .destacadas { width:353px; float:left; padding-right:24px; }
+.home-noticias > .destacadas { width:354px; float:left; padding-right:24px; }
 	.home-noticias > .destacadas li { margin-bottom:24px; }
 	.home-noticias > .destacadas > li > a:first-child { float:left; margin-right:10px; }
-	.home-noticias > .destacadas > li > a > img { max-width:49px; height:auto; }
+	.home-noticias > .destacadas > li > a > img { max-width:54px; height:auto; }
 	.home-noticias > .destacadas > li > .texto { float:left; width:290px; margin-left:64px; }
 	.home-noticias > .destacadas > li > a + .texto { margin-left:0; }
 	.home-noticias > .destacadas > li > .texto h3 { font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:13px; font-weight:bold; text-transform:uppercase; margin-bottom:2px; }
@@ -1131,10 +1131,9 @@ a:active.system-color-btn { background-color:#636363 !important; }
 			-moz-transition: all 0.5s ease;
 			-o-transition: all 0.5s ease;
 			transition: all 0.5s ease;
-			background-color: #905da3;
 		}
 		.archivos-list .pdf-btn:hover { background-color:#333333 !important; }
-		.archivos-list > li > h3 { font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:15px; line-height:18px; font-weight:bold;  margin-bottom:14px; color: #fb7c1b}
+		.archivos-list > li > h3 { font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:15px; line-height:18px; font-weight:bold;  margin-bottom:14px; }
 		.archivos-list > li  > h3 a:hover { color:#333333 !important; }
 		.archivos-list > li  > p { font-family:"Trebuchet MS", Arial, Helvetica, sans-serif; font-size:13px; color:#565656; line-height:17px; margin-bottom:4px; }
 	.archivos-actions { float:left; }
@@ -2045,22 +2044,6 @@ widthTweet
     color: #c00000;
     /*box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);*/
 }
-.tutoriales h3 
-{
-    display:block;
-    height:40px; 
-    /*padding:0 0 0 15px;*/
-    /*margin:0 0 0 14px; */
-    text-align:left; 
-    /*background-color: #c00000; */
-    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
-    font-weight:100; 
-    font-size:18px; 
-    line-height:40px; 
-    letter-spacing: 0.5px;
-    color: #FB7C1B;
-    /*box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);*/
-}
 
 .tutoriales a 
 {
@@ -2302,58 +2285,4 @@ widthTweet
     background-color: #e8b3b342 !important;
     border: none !important;
     box-shadow: none !important;
-}
-
-#hola 
-{
-    
-    height:40px; 
-    /*padding:0 0 0 15px;*/
-    /*margin:0 0 0 14px; */
-    text-align:left; 
-    /*background-color: #c00000; */
-    font-family:"Trebuchet MS", Arial, Helvetica, sans-serif;
-    font-weight:100; 
-    font-size:18px; 
-    line-height:40px; 
-    letter-spacing: 0.5px;
-    color: #FB7C1B;
-    /*box-shadow: 4px 4px 5px 0px rgba(0,0,0,0.75);*/
-   
-}
-
-
-
-@media (max-width: 768px) {
-    .carousel-inner .carousel-item > div {
-        display: none;
-    }
-    .carousel-inner .carousel-item > div:first-child {
-        display: block;
-    }
-}
-
-.carousel-inner .carousel-item.active,
-.carousel-inner .carousel-item-next,
-.carousel-inner .carousel-item-prev {
-    display: flex;
-}
-
-/* display 3 */
-@media (min-width: 768px) {
-    
-    .carousel-inner .carousel-item-right.active,
-    .carousel-inner .carousel-item-next {
-      transform: translateX(33.333%);
-    }
-    
-    .carousel-inner .carousel-item-left.active, 
-    .carousel-inner .carousel-item-prev {
-      transform: translateX(-33.333%);
-    }
-}
-
-.carousel-inner .carousel-item-right,
-.carousel-inner .carousel-item-left{ 
-  transform: translateX(0);
 }
